# aziz

./: .gitignore  README.md  devices.json.example  main.py  pyproject.toml  requirements.txt  run_server.py  test_server.py  tinytuya.json  tuya-raw.json
docs/: KICKOFF.md  mcp-primer.md
src/: tuya_mcp_server.py
