[project]
name = "tuya-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Tuya smart home devices"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp",
    "tinytuya", 
    "pydantic",
    "aiofiles"
]
requires-python = ">=3.8"

[project.scripts]
tuya-mcp-server = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
