[project]
name = "tuya-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Tuya smart home devices"
authors = [
    {name = "Tuya MCP Server Contributors", email = ""}
]
dependencies = [
    "mcp",
    "tinytuya", 
    "pydantic",
    "aiofiles"
]
requires-python = ">=3.8"

[project.scripts]
tuya-mcp-server = "main:main"

[project.gui-scripts]
# Optional: Add GUI script if needed

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/main.py",
    "/devices.json.example",
    "/README.md",
    "/docs"
]
