[project]
name = "tuya-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Tuya smart home devices"
authors = [
    {name = "Anonymous"}
]
dependencies = [
    "mcp",
    "tinytuya", 
    "pydantic",
    "aiofiles"
]
requires-python = ">=3.8"

[project.scripts]
tuya-mcp-server = "src.tuya_mcp_server:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
